# Excelingo

./: .gitignore  README.md  main.py  pyproject.toml
src/gui/: main_window.py  modern_window.py
src/translator/: llm_client.py  xlsx_processor.py
